Touch action hit test display items should count as drawable content

This patch updates PaintLayer::HasBoxDecorationsOrBackground to return
true if touch-action rects are painted in the background. This ensures
GraphicsLayer::DrawsContent is true if touch-action rects paint so that
the GraphicsLayer is included when ScrollingCoordinator collects touch
action rects in UpdateLayerTouchActionRects.

This fixes a bug where an embeded object's touch action rects were
skipped. A unit test has been added and this also passes the pdf
extension unit test in:
https://chromium-review.googlesource.com/c/chromium/src/+/1407488/1

Bug: 919286
Change-Id: I74f58722509dfb826f3e0ca7701f58cb35194fd0
Reviewed-on: https://chromium-review.googlesource.com/c/1408215
Reviewed-by: Xianda Sun <sunxd@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622468}
Former-commit-id: 1289c6b4d058c790f2d69a2f307e603e18e5cca0